Replace Path.of with Paths.get in PathFinder
Updated the PathFinder class to use java.nio.file.Paths.get instead of Path.of for constructing file paths to doors.json, teleports.json, and boats.json. This improves compatibility with Java versions prior to 11, where Path.of is not available.